# portfolio-v1

./: .env.production  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
client/: .env.development  .env.production  .gitignore  codegen.js  index.html  package.json  tailwind.config.js  vite.config.ts
client/src/: app.tsx  constants.ts  github-markdown.css  index.css  main.tsx  octokit-client.ts  openapi-client.ts  router.tsx  (+1 more)
docs/: index.html
server/: .gitignore  pyproject.toml  requirements.txt  template.env  vercel.json
server/api/: admin.py  models.py  pagination.py  serializers.py  throttling.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_alter_project_repository.py  0003_project_created_at.py  0004_remove_project_created_at.py  0005_rename_name_project_repository_name.py  0006_project_display_name.py  0007_alter_project_display_name.py
server/server/: settings.py  urls.py  wsgi.py
server/staticfiles/admin/css/: base.css  changelists.css  dark_mode.css  forms.css  nav_sidebar.css  responsive.css  responsive_rtl.css
server/staticfiles/admin/js/: SelectFilter2.js  actions.js  calendar.js  core.js
server/staticfiles/admin/js/admin/: RelatedObjectLookups.js
server/staticfiles/rest_framework/css/: bootstrap-tweaks.css
server/staticfiles/rest_framework/docs/js/: highlight.pack.js
server/staticfiles/rest_framework/js/: ajax-form.js  bootstrap.min.js  coreapi-0.1.1.js  csrf.js  load-ajax-form.js
src/: app.tsx  github-markdown.css  index.css  main.tsx  octokit-client.ts  vite-env.d.ts
(+290 files in other folders)
